--- a/.github/workflows/chippy.yml
+++ b/.github/workflows/chippy.yml
@@ -1,7 +1,7 @@
 # Copyright 2022 Manna Harbour
 # https://github.com/manna-harbour/miryoku
 
-name: 'Build Example mousekeyspr'
+name: 'chippy'
 on: workflow_dispatch
 jobs:
   build:
@@ -12,4 +12,4 @@ jobs:
       shield: '["chippy_left"]'
       custom_config: '["#define MIRYOKU_KLUDGE_MOUSEKEYSPR"]'
       kconfig: '["CONFIG_ZMK_MOUSE=y"]'
-      branches: '["zmkfirmware/zmk/main ftc/zmk/mouse-ftc"]'
+      branches: '["zmkfirmware/zmk/main urob/zmk/mouse-3.2"]'
